<resources>
    <string name="app_name">TravelPlannerApp</string>
    <string name="title_activity_buffer">BufferActivity</string>
    <string name="distance">Distance</string>
    <string name="velocity">Velocity</string>
    <string name="time_taken">Time needed is:</string>
    <string name="calculate">Calculate</string>
    <string name="total_time_with_buffer">Total Time needed with buffer is:</string>
    <string name="initial_time">Initial Time</string>
    <string name="buffer">Buffer</string>
    <string name="total_time_taken">Total Time needed is:</string>
    <string name="capture">Capture</string>
    <string name="go_to_list">Go To List</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_post">PostActivity</string>
</resources>
