<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.Common"
    tools:context=".TravelPlannerActivity">

    <EditText
        android:id="@+id/distance"
        android:hint="@string/distance"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <EditText
        android:id="@+id/velocity"
        android:hint="@string/velocity"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <TextView
        android:id="@+id/time"
        android:hint="@string/time_taken"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="number"/>

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/calculate"
        android:onClick="calculate"/>

    <TextView
        android:id="@+id/total_time"
        android:hint="@string/total_time_taken"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="number"/>

    <Button
        android:id="@+id/capture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/capture"
        android:onClick="capture"/>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:id="@+id/image"/>

</LinearLayout>